[package]
name = "wake_assault_cube"
version = "0.1.0"
edition = "2021"

[dependencies]
nvidia_amd_overlay = { path = "nvidia_amd_overlay" }

# Universal Dependencies ------------------
log = "0.4.22"
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
glam = "0.29.2"

# UI Dependencies ------------------
eframe = { version = "0.29.1", features = [
    "default",
    "persistence",
] }

serde_json = "1.0.132"


winit = "*"

# Cheat Dependencies ------------------
memlib = "0.1.1"
linkme = "0.3.29"
sysinfo = "0.32.0"
memoffset = "0.9.1"
fps_counter = "3.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp"] }