[package]
name = "nvidia_amd_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_Graphics_Dwm", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi", "Win32_Security", "Win32_System_Pipes", "Win32_System_IO", "Win32_Graphics_DirectWrite", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_DirectComposition", "Win32_UI_Controls", "Foundation_Numerics"] }
wio = "0.2.2"
str_crypter = "1.0.3"
